--- a/meals/static/style.css
+++ b/meals/static/style.css
@@ -1,136 +1,303 @@
-/* todo: change everything */
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
-html {
-  font-family: sans-serif;
-  background: #eee;
-  padding: 1rem;
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: 'Poppins',sans-serif;
+  color: #222;
 }
 
-body {
-  max-width: 960px;
+.navbar {
+  padding: .8rem;
+}
+
+.navbar-nav li {
+  padding-right: 20px;
+}
+
+.nav-link {
+  font-size: 1.1em !important;
+}
+
+.reframe {
+  height: 55px;
+  width: 195px;
+}
+
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-40%);
+}
+
+.carousel-caption h1 {
+  font-size: 500%;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 15px #000;
+}
+
+.carousel-caption h3 {
+  font-size: 200%;
+  font-weight: 500;
+  text-shadow: 1px 1px 10px #000;
+  padding-bottom: 1rem;
+}
+.technologies {
+  background-color: black !important;
+  color: white;
+}
+
+.burger{
+  transform: translateY(7%) !important;
+}
+
+.btn{
+  margin-left: 5rem;
+}
+.btn-primary {
+  background-color: #6648b1;
+  border: 1px solid #563d7c;
+}
+
+.btn-primary:hover {
+  background-color: #563d7c;;
+  border: 1px solid #563d7c;
+}
+
+.jumbotron {
+  padding: 2rem;
+  border-radius: 0;
+  margin-bottom: 0px;
+}
+
+.padding {
+  padding-bottom: 2rem;
+}
+
+.welcome {
+  width: 75%;
   margin: 0 auto;
-  background: white;
+  padding-top: 2rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: serif;
-  color: #377ba8;
-  margin: 1rem 0;
+.welcome hr {
+  border-top: 2px solid #b4b4b4;
+  width: 95%;
+  margin-top: .3rem;
+  margin-bottom: 1rem;
 }
 
-a {
-  color: #377ba8;
+.fa-paypal {
+  color: #2163af;
+  font-size: 4em;
+  margin: 1rem;
 }
 
-hr {
-  border: none;
-  border-top: 1px solid lightgray;
+.fun {
+  width: 100%;
+  margin-bottom: 2rem;
 }
 
-nav {
-  background: lightgray;
-  display: flex;
-  align-items: center;
-  padding: 0 0.5rem;
+.gif {
+  max-width: 100%;
 }
 
-nav h1 {
-  flex: auto;
-  margin: 0;
+.social a {
+  font-size: 4.5em;
+  padding: 3rem;
 }
 
-nav h1 a {
-  text-decoration: none;
-  padding: 0.25rem 0.5rem;
+.fa-facebook {
+  color: #3b5998;
 }
 
-nav ul  {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.fa-twitter {
+  color: #00aced;
 }
 
-nav ul li a, nav ul li span, header .action {
+.fa-instagram {
+  color: #517fa8;
+}
+
+.fa-youtube {
+  color: #bb0000;
+}
+
+.fa-facebook:hover, .fa-twitter:hover, .fa-instagram:hover, .fa-youtube:hover {
+  color: #d5d5d5;
+}
+
+footer {
+  background-color: black;
+  color: #d5d5d5;
+  padding-top: 2rem;
+}
+
+hr.light {
+  border-top: 1px solid #d5d5d5;
+  width: 75%;
+}
+
+hr.light-100 {
+  border-top: 1px solid #d5d5d5;
+  width: 100%;
+  margin-top: .8rem;
+  margin-bottom: 1rem;
+}
+
+
+
+
+
+
+
+/*---Media Queries --*/
+@media (max-width: 992px) {
+  .social a {
+    font-size: 4em;
+    padding: 2rem;
+  }
+
+  }
+@media (max-width: 768px) {
+  .carousel-caption {
+    top: 45%;
+  }
+  
+  .carousel-caption h1 {
+    font-size: 350%;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 15px #000;
+  }
+  
+  .carousel-caption h3 {
+    font-size: 140%;
+    font-weight: 400;
+    padding-bottom: 0.2rem;
+  }
+
+  .carousel-caption .btn {
+    font-size: 95%;
+    padding: 8px 14px;
+  }
+
+  .display-4 { 
+    font-size: 200%;
+  }
+
+  .social a {
+    font-size: 2.5em;
+    padding: 1.2rem;
+  }
+}
+@media (max-width: 576px) {
+  .carousel-caption {
+    top: 40%;
+  }
+  
+  .carousel-caption h1 {
+    font-size: 250%;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 15px #000;
+  }
+  
+  .carousel-caption h3 {
+    font-size: 110%;
+  }
+
+  .carousel-caption .btn {
+    font-size: 90%;
+    padding: 4px 8px;
+  }
+
+  .carousel-indcators {
+    display: none;
+  }
+
+  .display-4 { 
+    font-size: 160%;
+  }
+
+  .social a {
+    font-size: 2em;
+    padding: 0.7rem;
+  }
+  
+}
+
+
+/*---Firefox Bug Fix --*/
+.carousel-item {
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+/*--- Fixed Background Image --*/
+figure {
+  position: relative;
+  width: 100%;
+  height: 60%;
+  margin: 0!important;
+}
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#fixed {
+  background-image: url('img/blackbgmealswipers.png');
+  position: fixed;
   display: block;
-  padding: 0.5rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  will-change: transform;
+}
+/*--- Bootstrap Padding Fix --*/
+[class*="col-"] {
+    padding: 1rem;
 }
 
-.content {
-  padding: 0 1rem 1rem;
-}
 
-.content > header {
-  border-bottom: 1px solid lightgray;
-  display: flex;
-  align-items: flex-end;
-}
 
-.content > header h1 {
-  flex: auto;
-  margin: 1rem 0 0.25rem 0;
-}
 
-.flash {
-  margin: 1em 0;
-  padding: 1em;
-  background: #cae6f6;
-  border: 1px solid #377ba8;
-}
 
-.post > header {
-  display: flex;
-  align-items: flex-end;
-  font-size: 0.85em;
-}
+/*
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
 
-.post > header > div:first-of-type {
-  flex: auto;
-}
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
 
-.post > header h1 {
-  font-size: 1.5em;
-  margin-bottom: 0;
-}
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
 
-.post .about {
-  color: slategray;
-  font-style: italic;
-}
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
 
-.post .body {
-  white-space: pre-line;
-}
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+*/
 
-.content:last-child {
-  margin-bottom: 0;
-}
 
-.content form {
-  margin: 1em 0;
-  display: flex;
-  flex-direction: column;
-}
 
-.content label {
-  font-weight: bold;
-  margin-bottom: 0.5em;
-}
 
-.content input, .content textarea {
-  margin-bottom: 1em;
-}
 
-.content textarea {
-  min-height: 12em;
-  resize: vertical;
-}
 
-input.danger {
-  color: #cc2f2e;
-}
 
-input[type=submit] {
-  align-self: start;
-  min-width: 10em;
-}
+
