--- a/meals/templates/auth/register.html
+++ b/meals/templates/auth/register.html
@@ -1,17 +1,64 @@
-<!-- TODO: CHANGE EVERYTHING -->
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>MealSwipers - Signup</title>
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+      <link href="{{ url_for('static', filename='signupstyle.css') }}" rel="stylesheet" id="bootstrap-css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></script>
+      <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+      <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+   </head>
+   <body>
+      <script src="" async defer></script>
+   </body>
+</html>
 
-{% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
-{% endblock %}
+<!------ Include the above in your HEAD tag ---------->
 
-{% block content %}
-  <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Register">
-  </form>
-{% endblock %}
+<div class="sidenav">
+         <div class="login-main-text">
+            <img src = "img/whitelogoresize.png"></a>
+            <div class = "login-text">
+            <h2>Swipe me in!</h2>
+            </div>
+         </div>
+      </div>
+      <div class="main">
+         <div class="col-md-6 col-sm-12">
+            <div class="signup-form">
+               <form>
+                  <div class="form-group">
+                     <label>Name</label>
+                     <input type="text" class="form-control" placeholder="User Name">
+                  </div>
+                  <div class="form-group">
+                     <label>Email</label>
+                     <input type="text" class="form-control" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                     <label>Phone Number</label>
+                     <input type="text" class="form-control" placeholder="Phone Number">
+                  </div>
+                  <div class="form-group">
+                     <label>Venmo Username</label>
+                     <input type="text" class="form-control" placeholder="Venmo Username">
+                  </div>
+                  <div class="form-group">
+                     <label>User Name</label>
+                     <input type="text" class="form-control" placeholder="User Name">
+                  </div>
+                  <div class="form-group">
+                     <label>Password</label>
+                     <input type="password" class="form-control" placeholder="Password">
+                  </div>
+                  <button type="submit" class="btn btn-black">Register</button>
+               </form>
+            </div>
+         </div>
+      </div>
