commit these changes

--- a/meals/templates/auth/register.html
+++ b/meals/templates/auth/register.html
@@ -23,7 +23,7 @@
 
 <div class="sidenav">
          <div class="login-main-text">
-            <img src = "img/whitelogoresize.png"></a>
+            <img src = "{{url_for('static', filename='whitelogoresize.png')}}"></a>
             <div class = "login-text">
             <h2>Swipe me in!</h2>
             </div>
