--- a/meals/templates/trade/buy.html
+++ b/meals/templates/trade/buy.html
@@ -189,7 +189,7 @@ $(document).ready(function(){
 </script>
 <nav class = "navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class = "container-fluid">
-        <a class = "navbar-brand reframe" href = "#"><img src = "img/blackresize.png"></a>
+        <a class = "navbar-brand reframe" href = "#"><img src = "{{url_for('static', filename='blackresize.png')}}"></a>
         <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
             <span class = "navbar-toggler-icon"></span>
         </button>
@@ -244,7 +244,7 @@ $(document).ready(function(){
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td><a href="#"><img src="img/avatar50.png" class="avatar" alt="Avatar"> Yuurrrr </a></td>
+                        <td><a href="#"><img src="{{url_for('static', filename='avatar50.png')}}" class="avatar" alt="Avatar"> Yuurrrr </a></td>
                         <td>04/10/2013</td>                        
                         <td>$5.00</td>
                         <td><span class="status text-success">&bull;</span> Active</td>
@@ -254,7 +254,7 @@ $(document).ready(function(){
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td><a href="#"><img src="img/avatar50.png" class="avatar" alt="Avatar"> Yuurrrr</a></td>
+                        <td><a href="#"><img src="{{url_for('static', filename='avatar50.png')}}" class="avatar" alt="Avatar"> Yuurrrr</a></td>
                         <td>05/08/2014</td>                       
                         <td>$5.00</td>
                         <td><span class="status text-success">&bull;</span> Active</td>
@@ -264,7 +264,7 @@ $(document).ready(function(){
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td><a href="#"><img src="img/avatar50.png" class="avatar" > Yuurrrr</a></td>
+                        <td><a href="#"><img src="{{url_for('static', filename='avatar50.png')}}" class="avatar" > Yuurrrr</a></td>
                         <td>11/05/2015</td>
                         <td>$5.00</td>
                         <td><span class="status text-danger">&bull;</span> Offline</td>                        
@@ -274,7 +274,7 @@ $(document).ready(function(){
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td><a href="#"><img src="img/avatar50.png" class="avatar" alt="Avatar"> Yuurrrr </a></td>
+                        <td><a href="#"><img src="{{url_for('static', filename='avatar50.png')}}" class="avatar" alt="Avatar"> Yuurrrr </a></td>
                         <td>06/09/2016</td>
                         <td>$5.00</td>
                         <td><span class="status text-success">&bull;</span> Active</td>
@@ -284,7 +284,7 @@ $(document).ready(function(){
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td><a href="#"><img src="img/avatar50.png" class="avatar" alt="Avatar"> Yuurrrr </a></td>
+                        <td><a href="#"><img src="{{url_for('static', filename='avatar50.png')}}" class="avatar" alt="Avatar"> Yuurrrr </a></td>
                         <td>12/08/2017</td>                        
                         <td>$5.00</td>
                         <td><span class="status text-warning">&bull;</span> Inactive</td>
@@ -294,7 +294,7 @@ $(document).ready(function(){
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td><a href="#"><img src="img/avatar50.png" class="avatar" alt="Avatar"> Yuurrrr </a></td>
+                        <td><a href="#"><img src="{{url_for('static', filename='avatar50.png')}}" class="avatar" alt="Avatar"> Yuurrrr </a></td>
                         <td>12/08/2017</td>                        
                         <td>$5.00</td>
                         <td><span class="status text-warning">&bull;</span> Inactive</td>
