--- a/meals/templates/auth/login.html
+++ b/meals/templates/auth/login.html
@@ -27,7 +27,7 @@
 
 <div class="sidenav">
          <div class="login-main-text">
-            <img src = "img/whitelogoresize.png"></a>
+            <img src = "{{url_for('static', filename='whitelogoresize.png')}}"></a>
             <div class = "login-text">
             <h2>Swipe me in!</h2>
             </div>
@@ -35,7 +35,7 @@
       </div>
       <div class="main">
          <div class="col-md-6 col-sm-12">
-            <div class="login-form">
+            <div class="login-form ">
                <form>
                   <div class="form-group">
                      <label>User Name</label>
@@ -46,7 +46,7 @@
                      <input type="password" class="form-control" placeholder="Password">
                   </div>
                   <button type="submit" class="btn btn-black">Login</button>
-                  <button type="submit" class="btn btn-secondary"><a href="{{ url_for('auth.register') }}">Register</a></button>
+                  <a href = "{{url_for('auth.register') }}"><button type = "button" class="btn btn-secondary">Register</button></a>
                </form>
             </div>
          </div>
