--- a/meals/templates/trade/index.html
+++ b/meals/templates/trade/index.html
@@ -9,15 +9,14 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
+	<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" >
 </head>
 <body>
 
 <!-- Navigation -->
 <nav class = "navbar navbar-expand-md navbar-light bg-light sticky-top">
 <div class = "container-fluid">
-	<a class = "navbar-brand reframe" href = "#"><img src = "img/blackresize.png"></a>
+	<a class = "navbar-brand reframe" href = "#"><img src = "{{url_for('static', filename='blackresize.png')}}"></a>
 	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
 		<span class = "navbar-toggler-icon"></span>
 	</button>
@@ -51,7 +50,7 @@
 </ul>
 <div class = "carousel-inner">
 	<div class = "carousel-item active">
-		<img src = "img/background1.jpg">
+		<img src = "{{url_for('static', filename='background1.jpg')}}">
 		<div class = "carousel-caption">
 			<h1 class = "display-2">Meal Swipers</h1>
 			<h3>Swipe Me In</h3>
@@ -60,7 +59,7 @@
 		</div>
 	</div>
 	<div class = "carousel-item">
-		<img src = "img/blackbgmealswipers.png">
+		<img src = "{{url_for('static', filename='blackbgmealswipers.png')}}">
 	</div>
 </div>
 </div>
@@ -73,8 +72,8 @@
 		<p class = "lead"> Get cheaper food by buying people's swipes.</p>
 	</div>
 	<div class = "col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-		<a href = "#"><button type = "button" class = "btn btn-outline-secondary btn-lg">Login</button></a>
-		<a href = "#"><button type = "button" class = "btn btn-outline-secondary btn-lg">Sign Up</button></a>
+		<a href = "{{url_for('auth.login') }}"><button type = "button" class = "btn btn-outline-secondary btn-lg">Login</button></a>
+		<a href = "{{url_for('auth.register') }}"><button type = "button" class = "btn btn-outline-secondary btn-lg">Sign Up</button></a>
 	</div>
 </div>
 </div>
@@ -130,7 +129,7 @@
 		<a href = "#" class = "btn btn-primary"> Learn More</a>
 	</div>
 	<div class = "col-lg-6">
-		<img src = "img/burgerfinal.jpg" class = "burger">
+		<img src = "{{url_for('static', filename='burgerfinal.jpg')}}" class = "burger">
 	</div>
 
 </div>
@@ -161,7 +160,7 @@
 <div class = "row padding">
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "img/LayoCropped.jpg">
+			<img class = "card-img-top" src = "{{url_for('static', filename='LayoCropped.jpg')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Jesulayomi Kupoluyi</h4>
 				<p class = "card-text"> Something about yourself </p>
@@ -172,7 +171,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "img/team1.png">
+			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Andrew Duffield</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -183,7 +182,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "img/team1.png">
+			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Tevin McDowell</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -193,7 +192,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "img/team1.png">
+			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Kareem Akabashorun</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -203,7 +202,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "img/team1.png">
+			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">Shaoyang Wang</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -213,7 +212,7 @@
 	</div>
 	<div class = "col-md-4">
 		<div class = "card">
-			<img class = "card-img-top" src = "img/team1.png">
+			<img class = "card-img-top" src = "{{url_for('static', filename='team1.png')}}">
 			<div class = "card-body">
 				<h4 class = "card-title">David Tritsko</h4>
 				<p class = "card-text"> Something about yourself  </p>
@@ -244,31 +243,13 @@
 <footer>
 <div class = "container-fluid padding">
 <div class = "row text-center">
-	<div class = "col-md-4">
-		<img src = "img/mealswiperslogo.png">
+	<div class = "col-md-12">
+		<img src = "{{url_for('static', filename='mealswiperslogo.png')}}">
 		<hr class = "light">
 		<p>12304923234243</p>
 		<p>email</p>
 		<p>address</p>
 		<p>Rest of address</p>
-	</div>
-	<div class = "col-md-4">
-		<hr class = "light">
-		<h5>Our hours</h5>
-		<hr class = "light">
-		<p>Sunday : Closed/p>
-		<p>Sunday : Closed</p>
-		<p>Sunday : Closed</p>
-		<p>Sunday : Closed</p>
-	</div>
-	<div class = "col-md-4">
-		<hr class = "liiht">
-		<h5>Our hours</h5>
-		<hr class = "light">
-		<p>City, State, 0000</p>
-		<p>City, State, 0000</p>
-		<p>City, State, 0000</p>
-		<p>City, State, 0000</p>
 	</div>
 	<div class = "col-12">
 		<hr class = "light-100">
