--- a/meals/templates/auth/login.html
+++ b/meals/templates/auth/login.html
@@ -36,17 +36,20 @@
       <div class="main">
          <div class="col-md-6 col-sm-12">
             <div class="login-form ">
-               <form>
+               <form method = "post">
+                  {% for message in get_flashed_messages() %}
+                  <div class="flash">{{ message }}</div>
+                  {% endfor %}
                   <div class="form-group">
                      <label>User Name</label>
-                     <input type="text" class="form-control" placeholder="User Name">
+                     <input name = "username" id = "username" type="text" class="form-control" placeholder="User Name" required>
                   </div>
                   <div class="form-group">
                      <label>Password</label>
-                     <input type="password" class="form-control" placeholder="Password">
+                     <input type="password" name = "password" id = "password" class="form-control" placeholder="Password" required>
                   </div>
-                  <button type="submit" class="btn btn-black">Login</button>
-                  <a href = "{{url_for('auth.register') }}"><button type = "button" class="btn btn-secondary">Register</button></a>
+                  <button type="submit" class="btn btn-black" value = "Log In">Login</button>
+                  <a href = "{{url_for('auth.register')}}"><button type = "button" class="btn btn-secondary">Register</button></a>
                </form>
             </div>
          </div>
