--- a/meals/templates/auth/register.html
+++ b/meals/templates/auth/register.html
@@ -16,7 +16,7 @@
    <body>
       <script src="" async defer></script>
    </body>
-</html>
+
 
 
 <!------ Include the above in your HEAD tag ---------->
@@ -32,7 +32,8 @@
       <div class="main">
          <div class="col-md-6 col-sm-12">
             <div class="signup-form">
-               <form>
+               {% block content %}
+               <form method = "post">
                   <div class="form-group">
                      <label>Name</label>
                      <input type="text" class="form-control" placeholder="User Name">
@@ -49,16 +50,21 @@
                      <label>Venmo Username</label>
                      <input type="text" class="form-control" placeholder="Venmo Username">
                   </div>
+                  {% for message in get_flashed_messages() %}
+                  <div class="flash">{{ message }}</div>
+                  {% endfor %}
                   <div class="form-group">
-                     <label>User Name</label>
-                     <input type="text" class="form-control" placeholder="User Name">
+                     <label for = "username">User Name</label>
+                     <input name = "username" id = "username" type="text" class="form-control" placeholder="User Name" required>
                   </div>
                   <div class="form-group">
-                     <label>Password</label>
-                     <input type="password" class="form-control" placeholder="Password">
+                     <label for = "password">Password</label>
+                     <input type="password" name = "password" id = "password" class="form-control" placeholder="Password" required>
                   </div>
-                  <button type="submit" class="btn btn-black">Register</button>
+                  <button type="submit" value = "Register" class="btn btn-black">Register</button>
                </form>
+               {% endblock %}
             </div>
          </div>
       </div>
+</html>
