--- a/meals/templates/auth/login.html
+++ b/meals/templates/auth/login.html
@@ -58,7 +58,7 @@
       {% block header %}
   <h1>{% block title %}Posts{% endblock %}</h1>
   {% if g.user %}
-    <a class="action" href="{{ url_for('blog.create') }}">New</a>
+    <a class="action" href="{{ url_for('auth.login') }}">New</a>
   {% endif %}
 {% endblock %}
 
