--- a/meals/templates/trade/view.html
+++ b/meals/templates/trade/view.html
@@ -206,7 +206,7 @@
                                 </tr>
                                 <tr>
                                     <td align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
-                                        <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;"> Hey JKupoluyi, here's your order summary, and more information on your seller. </p>
+                                        <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;"> Hey {{g.user['username']}}, here's your order summary, and more information on your seller. </p>
                                     </td>
                                 </tr>
                                 <tr>
