--- a/meals/templates/trade/view.html
+++ b/meals/templates/trade/view.html
@@ -249,43 +249,26 @@
                             <table class="table  table-dark">
                                 <thead>
                                     <tr>
-                                        <th></th>
                                         <th>Username</th>
                                         <th>Rating </th>
                                         <th>Review</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    {% for review in review_post %}
                                     <tr>
-                                        <td>1</td>
-                                        <td>Clark</td>
-                                        <td><span class="fa fa-star checked"></span>
+                                        <td>{{review['username']}}</td>
+                                        <td>
+                                            {% for i in range(review['rating']) %}
                                             <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
+                                            {% endfor %}
+                                            {% for i in range(5 - review['rating']) %}
                                             <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span></td>
-                                        <td>Delivered on time</td>
+                                            {% endfor %}
+                                        </td>
+                                        <td>{{review['description']}}</td>
                                     </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td><span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span></td></td>
-                                        <td>Dude was very responsive</td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Peter</td>
-                                        <td><span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span></td></td>
-                                        <td>Never again buying a swipe from him</td>
-                                    </tr>            
+                                    {% endfor %}
                                 </tbody>
                             </table>
                             <tr>
