--- a/meals/templates/review/write.html
+++ b/meals/templates/review/write.html
@@ -1,21 +1,128 @@
 <!-- page for users to write reviews -->
-<h1>Write review</h1>
-<p>You are reviewing swipe {{post['id']}} from {{post['username']}} for ${{post['price']}}</p>
-<p>This was sold on {{post['timestamp_sell']}} and bought on {{post['timestamp_buy']}}</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="{{ url_for('static', filename='style.css') }}"
+      rel="stylesheet"
+    />
+    <title>MealSwipers - Buy Page</title>
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"> -->
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link
+      href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700");
 
-<form method="post">
-    <p>Review rating:</p>
-    <input type="radio" id="1star" name="star" value="1">
-    <label for="1star">1</label>
-    <input type="radio" id="2star" name="star" value="2">
-    <label for="2star">2</label>
-    <input type="radio" id="3star" name="star" value="3">
-    <label for="3star">3</label>
-    <input type="radio" id="4star" name="star" value="4">
-    <label for="4star">4</label>
-    <input type="radio" id="5star" name="star" value="5">
-    <label for="5star">5</label>
-    <p>Review text:</p>
-    <textarea name="review_text" cols="40" rows="3"></textarea><br>
-    <input type="submit" name="review_submit">
-</form>
+      .testimonial-box img {
+        display: inline-block;
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
+        margin: 0 0 15px;
+      }
+      .testimonial-box h4 {
+        color: #fe4819;
+      }
+      .testimonial-box p {
+        margin-bottom: 20px;
+        font-size: 17px;
+        font-style: italic;
+        font-weight: 400;
+      }
+      .ratings-icons {
+        color: #fec42d;
+        margin-bottom: 15px;
+      }
+    </style>
+    <script>
+      $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand reframe" href="#"
+          ><img src="{{url_for('static', filename='blackresize.png')}}"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Connect</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </head>
+  <h1>Write review</h1>
+  <h3>You are reviewing swipe bought on <b>{{post['timestamp_buy']}}</b> from <b>{{post['username']}}</b> for $<b>{{post['price']}}</b></h3>
+    <div class="row text-center">
+      <div class="col-sm-6 col-md-4">
+        <div class="testimonial-box">
+          <form method="post">
+            <p>Review rating:</p>
+            <input type="radio" id="1star" name="star" value="1">
+            <label for="1star">1</label>
+            <input type="radio" id="2star" name="star" value="2">
+            <label for="2star">2</label>
+            <input type="radio" id="3star" name="star" value="3">
+            <label for="3star">3</label>
+            <input type="radio" id="4star" name="star" value="4">
+            <label for="4star">4</label>
+            <input type="radio" id="5star" name="star" value="5">
+            <label for="5star">5</label>
+            <p>Review text:</p>
+            <textarea name="review_text" cols="40" rows="3"></textarea><br>
+            <input type="submit" name="review_submit">
+        </form>
+        </div>
+      </div>
+    </div>
+</html>
