Made some changes to Tevins part

--- a/meals/templates/trade/view.html
+++ b/meals/templates/trade/view.html
@@ -275,9 +275,10 @@
                                 <td align="center" style = "padding: 25px 0 15px 0;  background-color: black" bgcolor="#1b9ba3">
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="border-radius: 5px;" bgcolor="#66b3b7"> <a href="{{url_for('payment.buy', id=post['id'])}}" style="font-size: 18px; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: green; padding: 15px 15px; border: 1px solid black; display: block;">Choose Food</a> </td>
+                                            <td align="center" style="border-radius: 5px;" bgcolor="#66b3b7"> <a href="{{url_for('payment.view')}}" style="font-size: 18px; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: green; padding: 15px 15px; border: 1px solid black; display: block;">Choose Food</a> </td>
                                         </tr>
                                     </table>
+                                    <!-- {{url_for('payment.buy', id=post['id'])}} -->
                                 </td>
                                 </td>
                             </tr>
