--- a/meals/templates/payment/pay.html
+++ b/meals/templates/payment/pay.html
@@ -126,7 +126,7 @@ input[type="radio"] {
 													</label> <input type="text" required class="form-control"> </div>
 											</div>
 										</div>
-										<div class="card-footer"> <a href = "{{url_for('payment.buy', id=2)}} "><button type="button" class="subscribe btn btn-primary btn-block shadow-sm"> Confirm Payment </button></a>
+										<div class="card-footer"> <a href = "{{url_for('payment.buy', id = post['id'])}} "><button type="button" class="subscribe btn btn-primary btn-block shadow-sm"> Confirm Payment </button></a>
 									</form>
 								</div>
 							</div> <!-- End -->
