--- a/meals/templates/payment/viewpayment.html
+++ b/meals/templates/payment/viewpayment.html
@@ -143,23 +143,14 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Team</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Connect</a>
-					</li>
-				</ul>
+                <ul class = "navbar-nav ml-auto">
+                    <li class = "nav-item active">
+                        <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
+                    </li>
+                    <li class = "nav-item">
+                        <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
+                    </li>
+                </ul>
 			</div>
 		</div>
 	</nav>
@@ -198,19 +189,19 @@
                     </tr>
                     <tr>
                         <td align="center" style="padding: 35px 35px 20px 35px; background-color: #ffffff;" bgcolor="#ffffff">
-                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" >
+                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
-                                    <td align="center" style="font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;"> <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="125" height="120" style="display: block; border: 0px;" /><br>
-                                        <h2 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;"> Let's Eat! </h2>
+                                    <td align="center" style="font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 5px;"> <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="130" height="130" style="display: block; border: 0px;" /><br>
+                                        <h2 style="font-size: 30px; font-weight: 800; padding-bottom: 5px; line-height: 36px; color: #333333; margin: 0;"> Thank you! </h2>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
-                                        <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;"> Hey {{g.user['username']}}, Thanks for your order, please leave a review for the seller. </p>
+                                        <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;"> Hey {{g.user['username']}}! Thanks for your order. Please leave a review for the seller. </p>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <!-- <td align="left" style="padding-top: 20px;">
+                                     <td align="left" style="padding-top: 20px;">
                                         <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                             <tr>
                                                 <td width="75%" align="left" bgcolor="#eeeeee" style="font-weight: 800; line-height: 24px; padding: 10px;"> Order Number # </td>
@@ -221,16 +212,16 @@
                                                 <td width="25%" align="left" class = "swipe_price"> ${{post['price']}} </td>
                                             </tr>
                                         </table>
-                                    </td> -->
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td align="left" style="padding-top: 20px;">
-                                        <!-- <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                        <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                             <tr>
                                                 <td width="75%" align="left" class = "swipe_total"> TOTAL </td>
                                                 <td width="25%" align="left" class = "swipe_total"> ${{post['price']}} </td>
                                             </tr>
-                                        </table> -->
+                                        </table> 
                                     </td>
                                 </tr>
                             </table>
