--- a/meals/templates/trade/view.html
+++ b/meals/templates/trade/view.html
@@ -143,23 +143,14 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Team</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Connect</a>
-					</li>
-				</ul>
+                <ul class = "navbar-nav ml-auto">
+                    <li class = "nav-item active">
+                        <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
+                    </li>
+                    <li class = "nav-item">
+                        <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
+                    </li>
+                </ul>
 			</div>
 		</div>
 	</nav>
@@ -200,7 +191,7 @@
                         <td align="center" style="padding: 35px 35px 20px 35px; background-color: #ffffff;" bgcolor="#ffffff">
                             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" >
                                 <tr>
-                                    <td align="center" style="font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;"> <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="125" height="120" style="display: block; border: 0px;" /><br>
+                                    <td align="center" style="font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;"> <img src="https://img.icons8.com/ios/100/000000/food.png" width="100" height="120" style="display: block; border: 0px;" /><br>
                                         <h2 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;"> Let's Eat! </h2>
                                     </td>
                                 </tr>
