--- a/meals/templates/trade/buy.html
+++ b/meals/templates/trade/buy.html
@@ -196,19 +196,10 @@ $(document).ready(function(){
         <div class = "collapse navbar-collapse" id = "navbarResponsive">
             <ul class = "navbar-nav ml-auto">
                 <li class = "nav-item active">
-                    <a class = "nav-link" href = "#">Home</a>
+                    <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
                 </li>
                 <li class = "nav-item">
-                    <a class = "nav-link" href = "#">About</a>
-                </li>
-                <li class = "nav-item">
-                    <a class = "nav-link" href = "#">Services</a>
-                </li>
-                <li class = "nav-item">
-                    <a class = "nav-link" href = "#">Team</a>
-                </li>
-                <li class = "nav-item">
-                    <a class = "nav-link" href = "#">Connect</a>
+                    <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
                 </li>
             </ul>
         </div>
