--- a/meals/templates/trade/sell.html
+++ b/meals/templates/trade/sell.html
@@ -82,21 +82,12 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home</a>
+				<ul class = "navbar-nav ml-auto">
+					<li class = "nav-item active">
+						<a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Team</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Connect</a>
+					<li class = "nav-item">
+						<a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
 					</li>
 				</ul>
 			</div>
