--- a/meals/templates/review/read.html
+++ b/meals/templates/review/read.html
@@ -1,7 +1,4 @@
 <!-- page for users to read reviews -->
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,30 +9,20 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="favicon.ico">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"> -->
 
 <title>MealSwipers - Read Review Page</title>
 
-<link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 <script src="js/ie-emulation-modes-warning.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-
+</head>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
 body {
-  padding-top: 70px;
   font-family: 'Poppins',sans-serif;
 }
 .nav-link {
@@ -64,9 +51,11 @@ body {
 .review-block{
   background-color:#FAFAFA;
   border:1px solid #EFEFEF;
-  padding:15px;
+  margin-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
   border-radius:3px;
-  margin-bottom:15px;
+  margin-bottom:0px;
 }
 .review-block-date{
   font-size:12px;
@@ -81,141 +70,65 @@ body {
 }
 </style>
 <script>
-$(document).ready(function(){
-  $('[data-toggle="tooltip"]').tooltip();
-});
 </script>
 <nav class = "navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class = "container-fluid">
-        <a class = "navbar-brand reframe" href = "#"><img src = "{{url_for('static', filename='blackresize.png')}}"></a>
-        <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
-            <span class = "navbar-toggler-icon"></span>
-        </button>
-        <div class = "collapse navbar-collapse" id = "navbarResponsive">
-            <ul class = "navbar-nav ml-auto">
-                <li class = "nav-item active">
-                    <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
-                </li>
-                <li class = "nav-item">
-                    <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+  <div class = "container-fluid">
+      <a class = "navbar-brand reframe" href = "#"><img src = "{{url_for('static', filename='blackresize.png')}}"></a>
+      <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
+          <span class = "navbar-toggler-icon"></span>
+      </button>
+      <div class = "collapse navbar-collapse" id = "navbarResponsive">
+          <ul class = "navbar-nav ml-auto">
+              <li class = "nav-item active">
+                  <a class = "nav-link" href = "{{url_for('trade.buy')}}">Home</a>
+              </li>
+              <li class = "nav-item">
+                  <a class = "nav-link" href = "{{url_for('auth.logout')}}">Logout</a>
+              </li>
+          </ul>
+      </div>
+  </div>
 </nav>
-</head>
+
 
 <body>
-  <h1 align="center" style = "padding-bottom: 10px; padding-top: 50px;">Reviews for {{username}}</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-7">
+  <h3 align="center" style = "padding-bottom: 10px; padding-top: 50px;">Reviews for {{username}}</h3>
+  <div align = "center" class="container">
+    <div class = "container" class="row">
+      <div>
         <div class="review-block">
           {% block content %} 
           {% for review in post %}
-          <div class="row">
+          <div class="row" style = "  margin: 0;
+          padding: 15px;">
             <div class="col-sm-3">
-              <div class="review-block-date">{{ review['timestamp'].strftime('%Y-%m-%d') }}</div>
+              <img src= "{{url_for('static', filename='avatar50.png')}}" class="img-rounded">
+              <div class="review-block-name">anon</div>
+              <div class="review-block-date" style = "font-size: 15px">{{ review['timestamp'].strftime('%Y-%m-%d') }}</div>
             </div>
             <div class="col-sm-9">
               <div class="review-block-rate">
-                {% if review['rating'] == 1 %}
-                <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                {% for i in range(review['rating']) %}
+                <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align" style = "font-size: 5px" >
+								  <span class="fa fa-star checked" aria-hidden="true" style = "font-size: 20px" ></span>
 								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                {% endfor %}
+                {% for i in range(5 - review['rating']) %}
+                <button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align" style = "font-size: 5px">
+								  <span class="fa fa-star" aria-hidden="true" style = "font-size: 20px"></span>
 								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-                {% elif  review['rating'] == 2 %}
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                {% elif  review['rating'] == 3 %}
-                <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                {% elif  review['rating'] == 4 %}
-                <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                {% elif  review['rating'] == 5 %}
-                <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</button>
-								<button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                {% endif %}
+                {% endfor %}
 							</div>
-              <div class="review-block-description">{{ review['description']}}</div>
+              <div class="review-block-description" style = "font-size: 20px">{{ review['description']}}</div>
             </div>
           </div>
-          <hr/>
+          <hr style = "margin: 0"/>
           {% endfor %} 
           {% endblock %}
         </div>
       </div>
     </div>
-    
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+  </div>
 </body>
 </html>
 
