--- a/meals/templates/trade/sell.html
+++ b/meals/templates/trade/sell.html
@@ -127,10 +127,10 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-sm-2" for="number">Contact Number:</label>
+							<label class="control-label col-sm-2" for="number">Email:</label>
 							<div class="col-sm-10">
 								<input type="email" class="form-control" id="number"
-									placeholder="Enter number to contact" name="number">
+									placeholder="Enter your email address" name="number">
 							</div>
 						</div>
 						<div class="form-group">
